--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-bs4
-html5lib
-requests
-pyyaml
-pydash
-conllu
+beautifulsoup4==4.7.1
+conllu==1.3.1
+html5lib==1.0.1
+pydash==4.7.4
+pyyaml==5.1.2
 quart==0.6.15
+requests==2.21.0
+yattag==1.13.2
